name:            mega-yesod-mega
version:         0.9.3
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Creation of type-safe, RESTful web applications.
description:
    Builds all yesod* repo code at once

category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/

flag ghc7

flag threaded
    default: True
    description: Build with support for multithreaded execution

library
    hs-source-dirs: 
                    yesod/yesod
                    yesod/yesod-auth
                    yesod/yesod-core
                    yesod/yesod-default
                    yesod/yesod-examples
                    yesod/yesod-form
                    yesod/yesod-json
                    yesod/yesod-newsfeed
                    yesod/yesod-persistent
                    yesod/yesod-sitemap
                    yesod/yesod-static
                    wai/wai
                    wai/wai-app-static
                    wai/wai-eventsource
                    wai/wai-extra
                    wai/wai-handler-devel
                    wai/wai-handler-fastcgi
                    wai/wai-handler-launch
                    wai/wai-handler-scgi
                    wai/wai-handler-webkit
                    wai/wai-test
                    wai/wai-websockets
                    wai/warp
                    wai/warp-static

                    hamlet/shakespeare
                    hamlet/shakespeare-js
                    hamlet/shakespeare-css
                    hamlet/shakespeare-text
                    hamlet/hamlet

                    persistent/persistent
                    persistent/persistent-sqlite
                    persistent/persistent-postgresql
                    persistent/persistent-template
                    persistent/persistent-mongoDB

    exposed-modules:
                     -- persistent-mongoDB
                     Database.Persist.MongoDB
                     -- persistent-template
                     Database.Persist.TH
                     -- persistent-postgresql
                     Database.Persist.Postgresql
                     -- persistent-sqlite
                     Database.Sqlite
                     Database.Persist.Sqlite

                     -- persistent
                     Database.Persist
                     Database.Persist.Base
                     Database.Persist.Quasi
                     Database.Persist.GenericSql
                     Database.Persist.GenericSql.Internal
                     Database.Persist.GenericSql.Raw
                     Database.Persist.TH.Library
                     Database.Persist.Util
                     Database.Persist.Join
                     Database.Persist.Join.Sql

                     -- hamlet
                     Text.Hamlet
                     Text.Hamlet.RT

                     -- shakespeare-css
                     Text.Cassius
                     Text.Lucius

                     -- shakespeare-js
                     Text.Julius
                     Text.Coffee

                     -- shakespeare
                     Text.Shakespeare
                     Text.Shakespeare.Base

                     -- shakespeare-text
                     Text.Shakespeare.Text
                     -- yesod
                     Yesod
                     -- yesod-static
                     Yesod.Static
                     -- yesod-persistent
                     Yesod.Persist
                     -- yesod-json
                     Yesod.Json
                     -- yesod-sitemap
                     Yesod.Sitemap

                     -- yesod-core
                     Yesod.Content
                     Yesod.Core
                     Yesod.Dispatch
                     Yesod.Handler
                     Yesod.Logger
                     Yesod.Request
                     Yesod.Widget
                     Yesod.Message
                     Yesod.Config
                     Yesod.Internal.TestApi

                     -- yesod-form
                     Yesod.Form
                     Yesod.Form.Class
                     Yesod.Form.Types
                     Yesod.Form.Functions
                     Yesod.Form.Input
                     Yesod.Form.Fields
                     Yesod.Form.Jquery
                     Yesod.Form.Nic
                     Yesod.Form.MassInput
                     Yesod.Form.I18n.English
                     Yesod.Form.I18n.Swedish

                     -- yesod-auth
                     Yesod.Auth
                     Yesod.Auth.BrowserId
                     Yesod.Auth.Dummy
                     Yesod.Auth.Email
                     Yesod.Auth.Facebook
                     Yesod.Auth.OpenId
                     Yesod.Auth.OAuth
                     Yesod.Auth.Rpxnow
                     Yesod.Auth.HashDB
                     Yesod.Auth.Message
                     Yesod.Auth.Kerberos

                     -- yesod-default
                     Yesod.Default.Config
                     Yesod.Default.Main
                     Yesod.Default.Util
                     Yesod.Default.Handlers

                     -- yesod-newsfeed
                     Yesod.AtomFeed
                     Yesod.RssFeed
                     Yesod.Feed

                    -- warp-static

                    -- warp
                    Network.Wai.Handler.Warp

                    -- wai-websockets
                    Network.Wai.Handler.WebSockets

                    -- wai-test
                    Network.Wai.Test

                    -- wai-handler-webkit
                    Network.Wai.Handler.Webkit

                    -- wai-handler-scgi
                    Network.Wai.Handler.SCGI

                    -- wai-handler-launch
                    Network.Wai.Handler.Launch

                    -- wai-handler-fastcghi
                    Network.Wai.Handler.FastCGI

                    -- wai-app-static
                    Network.Wai.Application.Static

                    --wai
                    Network.Wai

                    -- wai-handler-devel
                    Network.Wai.Handler.DevelServer
                    Network.Wai.Application.Devel

                    -- wai-extra
                    Network.Wai.Handler.CGI
                    Network.Wai.Middleware.AcceptOverride
                    Network.Wai.Middleware.Autohead
                    Network.Wai.Middleware.CleanPath
                    Network.Wai.Middleware.Debug
                    Network.Wai.Middleware.Gzip
                    Network.Wai.Middleware.Jsonp
                    Network.Wai.Middleware.MethodOverride
                    Network.Wai.Middleware.Rewrite
                    Network.Wai.Middleware.Vhost
                    Network.Wai.Zlib
                    Network.Wai.Parse

    other-modules: 
                     -- yesod-core
                     Yesod.Internal
                     Yesod.Internal.Core
                     Yesod.Internal.Session
                     Yesod.Internal.Request
                     Yesod.Internal.Dispatch
                     Yesod.Internal.RouteParsing

                     -- yesod
                     Scaffolding.CodeGen
                     Scaffolding.Scaffolder
                     Devel
                     Build

                     -- hamlet
                     Text.Hamlet.Parse

                     -- shakespeare-css
                     Text.MkSizeType
                     Text.Css


    cpp-options:     -DMEGA

    if flag(ghc7)
        build-depends:   base                  >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base                  >= 4        && < 4.3

    include-dirs: yesod/yesod-auth/include

    if !os(windows)
         build-depends: unix

    build-depends:
                   -- persistent-mongodb
                     mongoDB            >= 1.1     && < 1.2
                   , bson               >= 0.1.6
                   , network            >= 2.2.1.7 && < 3
                   , compact-string-fix >= 0.3.1   && < 0.4
                   , cereal             >= 0.3.0.0
                   , path-pieces        >= 0.0     && < 0.1

                   -- persistent-template
                   , template-haskell
                   -- persistent-postgresql
                   , HDBC                  >= 2.2.6    && < 2.4
                   , HDBC-postgresql       >= 2.2.3.1  && < 2.4

                   -- persistent-sqlite
                   , neither                  >= 0.3       && < 0.4
                   , bytestring               >= 0.9.1     && < 0.10

                   -- persistent
                   , transformers             >= 0.2.1   && < 0.3
                   , time                     >= 1.1.4   && < 1.3
                   , text                     >= 0.8     && < 0.12
                   , containers               >= 0.2     && < 0.5
                   , enumerator               >= 0.4.9   && < 0.5
                   , monad-control            >= 0.2     && < 0.3
                   , pool                     >= 0.1     && < 0.2
                   , blaze-html               >= 0.4     && < 0.5
                   , path-pieces              >= 0.0     && < 0.1
                   , mtl                      >= 2.0     && < 2.1
                   , data-object              >= 0.3.1.7 && < 0.4
                   -- wai-handler-scgi
                   -- wai-handler-launch
                   , process >= 1.0 && < 1.2
                   -- warp-static

                   -- warp
                   , simple-sendfile               >= 0.1      && < 0.2

                   -- wai-websockets
                   , network-enumerator            >= 0.1.2    && < 0.2
                   , websockets                    >= 0.4      && < 0.5

                   -- wai-test
                   , cookie                    >= 0.2      && < 0.4
                   , HUnit                     >= 1.2      && < 1.3
                   , case-insensitive          >= 0.2      && < 0.4

                   -- wai-handler-devel
                   , hint                     >= 0.3.2.3       && < 0.4
                   , text                     >= 0.7           && < 0.12
                   , old-time                 >= 1.0           && < 1.1
                   , attoparsec-text          >= 0.8.2         && < 0.9

                     -- wai-extra
                   , old-locale                >= 1.0     && < 1.1
                   , network                   >= 2.2.1.5 && < 2.4
                   , directory                 >= 1.0.1   && < 1.2
                   , zlib-bindings             >= 0.0     && < 0.1
                   , blaze-builder-enumerator  >= 0.2     && < 0.3
                   , case-insensitive          >= 0.2     && < 0.4
                   , zlib-enum                 >= 0.2.1   && < 0.3
                   , data-default              >= 0.3     && < 0.4

                   -- wai-app-static
                   , bytestring                >= 0.9.1.4  && < 0.10
                   , http-types                >= 0.6      && < 0.7
                   , transformers              >= 0.2.2    && < 0.3
                   , unix-compat               >= 0.2      && < 0.3
                   , containers                >= 0.2      && < 0.5
                   , blaze-html                >= 0.4      && < 0.5
                   , time                      >= 1.1.4    && < 1.4
                   , old-locale                >= 1.0.0.2  && < 1.1
                   , file-embed                >= 0.0.3.1  && < 0.1
                   , blaze-builder             >= 0.2.1.4  && < 0.4
                   , base64-bytestring         >= 0.1      && < 0.2
                   , cryptohash                >= 0.7      && < 0.8
                   , http-date

                   -- wai
                   , enumerator                >= 0.4.8    && < 0.5
                   , http-types                >= 0.6      && < 0.7
                   , text                      >= 0.5      && < 1.0
                   -- yesod
                   , Cabal              >= 1.8          && < 1.13
                   , shakespeare-text   >= 0.10     && < 0.11
                   , attoparsec-text    >= 0.8.5        && < 0.9
                   , filepath           >= 1.1          && < 1.3
                   , process
                   -- yesod-sitemap
                   -- empty

                   -- yesod-newsfeed

                   -- yesod-default
                   , cmdargs           >= 0.8   && < 0.9

                   -- yesod-auth
                   , authenticate          >= 0.10      && < 0.11
                   , control-monad-attempt >= 0.3.0     && < 0.4
                   , mime-mail             >= 0.3       && < 0.4
                   , SHA                   >= 1.4.1.3   && < 1.6
                   , http-enumerator       >= 0.6       && < 0.8
                   , pwstore-fast          >= 2.2       && < 3
                   , old-time              >= 1.0
                   , base64-bytestring     >= 0.1.0.1  && < 0.2
                   , pureMD5               >= 2.1.0.3  && < 2.2
                   , cereal                >= 0.3      && < 0.4
                   , file-embed            >= 0.0.4.1  && < 0.5
                   , unix-compat           >= 0.2      && < 0.3
                   , enumerator            >= 0.4.14   && < 0.5
                   , transformers          >= 0.2.2    && < 0.3
                   , data-default          >= 0.3      && < 0.4
                   , xss-sanitize          >= 0.3.0.1  && < 0.4
                   , blaze-builder         >= 0.2.1    && < 0.4
                   , network               >= 2.2      && < 2.4
                   , email-validate        >= 0.2.6    && < 0.3
                   , persistent            >= 0.6      && < 0.7
                   , persistent-template   >= 0.6      && < 0.7
                   , failure               >= 0.1      && < 0.2
                   , warp                  >= 0.4      && < 0.5
                   , time                  >= 1.1.4    && < 1.3
                   , bytestring            >= 0.9.1.4  && < 0.12
                   , text                  >= 0.9      && < 0.12
                   , template-haskell
                   , path-pieces           >= 0.0      && < 0.1
                   , hamlet                >= 0.10     && < 0.11
                   , shakespeare           >= 0.10     && < 0.11
                   , shakespeare-js        >= 0.10     && < 0.11
                   , shakespeare-css       >= 0.10     && < 0.11
                   , blaze-builder         >= 0.2.1    && < 0.4
                   , clientsession         >= 0.7.3.1  && < 0.8
                   , random                >= 1.0.0.2  && < 1.1
                   , old-locale            >= 1.0.0.2  && < 1.1
                   , failure               >= 0.1      && < 0.2
                   , containers            >= 0.2      && < 0.5
                   , monad-control         >= 0.2      && < 0.3
                   , cookie                >= 0.3      && < 0.4
                   , blaze-html            >= 0.4.1.3  && < 0.5
                   , http-types            >= 0.6.5    && < 0.7
                   , case-insensitive      >= 0.2      && < 0.4
                   , parsec                >= 2.0      && < 3.2
                   , directory             >= 1.0      && < 1.2
                   , data-object           >= 0.3      && < 0.4
                   , data-object-yaml      >= 0.3      && < 0.4
                   , strict-concurrency    >= 0.2.4    && < 0.2.5
                   , vector                >= 0.9      && < 0.10
                   , aeson-native          >= 0.3.3.1  && < 0.4
    ghc-options:     -Wall

test-suite tests
    type: exitcode-stdio-1.0
    main-is: test/main.hs
    hs-source-dirs: test/yesod-core

    if flag(ghc7)
        type: exitcode-stdio-1.0
        build-depends:   base                      >= 4.3      && < 5
        cpp-options:     -DGHC7
        main-is:         test.hs
    else
        type: exitcode-stdio-1.0
        build-depends:   base                      >= 4        && < 4.3
        main-is:         test.hs
    cpp-options:   -DTEST
    build-depends: hspec >= 0.8 && < 0.10
                  ,mega-mega
                  ,bytestring
                  ,hamlet
                  ,shakespeare-css
                  ,shakespeare-js
                  ,text
                  ,http-types
                  , random
                  ,HUnit
                  ,QuickCheck >= 2 && < 3
                  , enumerator
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/yesod.git

